--- a/client/src/app/master-duel/secret-packs/secret-packs.component.html
+++ b/client/src/app/master-duel/secret-packs/secret-packs.component.html
@@ -9,4 +9,12 @@
       />
     </a>
   </div>
+  <div *ngFor="let i of [].constructor(50)">
+    <p-skeleton
+      *ngIf="isLoading"
+      height="420px"
+      width="210px"
+      styleClass="mb-1"
+    ></p-skeleton>
+  </div>
 </div>
