--- a/client/src/app/collections/collection/collection-card/collection-card.component.css
+++ b/client/src/app/collections/collection/collection-card/collection-card.component.css
@@ -3,8 +3,11 @@
   text-align: center;
   color: white;
   cursor: pointer;
-  width: 105px;
-  height: 153px;
+}
+
+.card-img {
+  width: 199px;
+  height: auto;
 }
 
 .centered {
@@ -20,4 +23,13 @@
     2px 0px 0 #000, 1px 2px 0 #000, -1px 2px 0 #000, 1px -2px 0 #000,
     -1px -2px 0 #000, 2px 1px 0 #000, -2px 1px 0 #000, 2px -1px 0 #000,
     -2px -1px 0 #000;
+}
+
+.rarity {
+  text-align: end;
+}
+
+.rarity img {
+  height: 20px;
+  position: relative;
 }
