--- a/client/src/app/master-duel/secret-pack/secret-pack.component.html
+++ b/client/src/app/master-duel/secret-pack/secret-pack.component.html
@@ -1,4 +1,5 @@
 <h3>{{ secretPack.set_name }}</h3>
+<p-skeleton *ngIf="loading" width="100%" height="40px"></p-skeleton>
 
 <div class="d-flex justify-content-start pack-options">
   <div>
@@ -25,13 +26,22 @@
   </div>
 </div>
 
-<p-chart
-  *ngIf="chartData"
-  type="line"
-  [data]="chartData.data"
-  [options]="chartData.options"
->
+<p-skeleton *ngIf="loading" width="100%" height="600px"></p-skeleton>
+<p-chart type="line" [data]="chartData.data" [options]="chartData.options">
 </p-chart>
+
+<div class="d-flex box my-3 align-items-end">
+  <div>
+    <div>Packs To Open</div>
+    <p-inputnumber [(ngModel)]="packsToOpen" />
+  </div>
+
+  <p-button
+    class="ms-3"
+    label="Open Sample Packs"
+    (onClick)="openPacks()"
+  ></p-button>
+</div>
 
 <div class="wrapping-list box" style="justify-content: space-evenly">
   <app-master-duel-card
