--- a/client/src/app/master-duel/secret-pack/secret-pack.component.css
+++ b/client/src/app/master-duel/secret-pack/secret-pack.component.css
@@ -1,3 +1,19 @@
+.pack-options {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
 .pack-options > div {
-  padding: 0.5rem 1rem;
+  min-width: 200px;
+}
+
+@media (max-width: 768px) {
+  .pack-options {
+    flex-direction: column;
+  }
+
+  .pack-options > div {
+    width: 100%;
+  }
 }
