--- a/client/src/app/master-duel/secret-pack/secret-pack.component.html
+++ b/client/src/app/master-duel/secret-pack/secret-pack.component.html
@@ -1,7 +1,7 @@
 <h3>{{ secretPack.set_name }}</h3>
 <p-skeleton *ngIf="loading" width="100%" height="40px"></p-skeleton>
 
-<div class="d-flex justify-content-start pack-options">
+<div class="pack-options">
   <div>
     <div>Number of Packs</div>
     <p-inputnumber [(ngModel)]="numPacks" (ngModelChange)="calculateOdds()" />
@@ -36,11 +36,7 @@
     <p-inputnumber [(ngModel)]="packsToOpen" />
   </div>
 
-  <p-button
-    class="ms-3"
-    label="Open Sample Packs"
-    (onClick)="openPacks()"
-  ></p-button>
+  <p-button class="ms-3" label="Open Packs" (onClick)="openPacks()"></p-button>
 </div>
 
 <div class="wrapping-list box" style="justify-content: space-evenly">
