--- a/client/src/app/_shared/card-modal/card-modal.component.html
+++ b/client/src/app/_shared/card-modal/card-modal.component.html
@@ -5,6 +5,7 @@
   [closable]="true"
   appendTo="body"
   [blockScroll]="false"
+  [contentStyle]="{ overflow: 'auto' }"
 >
   <!-- <div class="navigation-buttons">
     <button class="nav-button left" (click)="previousCard.emit()">
@@ -14,7 +15,7 @@
       <i class="pi pi-chevron-right"></i>
     </button>
   </div> -->
-  <div class="d-flex justify-content-center">
+  <div class="d-flex">
     <div class="modal-left">
       <img
         src="https://ygodraft.net/images/{{ card.card_id }}.webp"
@@ -23,7 +24,7 @@
       />
     </div>
     <div class="modal-right">
-      <div class="card-header">
+      <div class="card-header-row">
         <div>{{ card.card_name }}</div>
         <img
           *ngIf="card.attribute"
