updates to collections

--- a/client/src/app/collections/collections/collections.component.html
+++ b/client/src/app/collections/collections/collections.component.html
@@ -14,7 +14,7 @@
 
 <div *ngIf="!loading && collections?.length === 0" class="text-center">
   You don't have any collections yet! Start a
-  <a routerLink="/drafting">draft</a> and create one.
+  <a routerLink="/classic">draft</a> and create one.
 </div>
 
 <p-confirmPopup></p-confirmPopup>
