--- a/client/src/app/master-duel/secret-pack-opening/secret-pack-opening.component.html
+++ b/client/src/app/master-duel/secret-pack-opening/secret-pack-opening.component.html
@@ -54,14 +54,22 @@
     *ngIf="packsOpened < packsToOpen"
     (click)="skip()"
   ></button>
-  <button
-    pButton
-    type="button"
-    label="Ok"
-    icon="pi pi-angle-right"
-    iconPos="left"
-    class="p-button mx-1"
-    *ngIf="packsOpened >= packsToOpen"
-    (click)="skip()"
-  ></button>
+
+  <!-- Finished Opening -->
+  <p-splitButton
+    *ngIf="packsOpened >= packsToOpen && allFlipped"
+    [label]="'Open ' + selectedPackQuantity + ' more'"
+    icon="pi pi-plus"
+    [model]="packOptions"
+    (onClick)="addMorePacks()"
+    styleClass="p-button-success mx-1"
+  ></p-splitButton>
+  <p-splitButton
+    *ngIf="packsOpened >= packsToOpen && allFlipped"
+    label="Add to Collection"
+    icon="pi pi-plus"
+    [model]="collectionOptions"
+    (onClick)="finish()"
+    styleClass="p-button-success mx-1"
+  ></p-splitButton>
 </div>
