--- a/client/src/app/master-duel/secret-packs/secret-packs.component.html
+++ b/client/src/app/master-duel/secret-packs/secret-packs.component.html
@@ -1,4 +1,34 @@
-<div class="wrapping-list box" style="justify-content: space-between">
+<!-- search box -->
+<div class="d-flex justify-content-between box">
+  <div>
+    <h6>Search by pack or card</h6>
+    <input
+      style="width: 400px"
+      type="text"
+      pInputText
+      [(ngModel)]="searchText"
+      (ngModelChange)="searchPacks()"
+    />
+  </div>
+  <div class="d-flex align-items-end">
+    <div>
+      <div>Packs To Open</div>
+      <p-inputnumber [(ngModel)]="packsToOpen" />
+    </div>
+
+    <p-button
+      class="ms-3"
+      label="Open Secret Packs"
+      (onClick)="openPacks()"
+    ></p-button>
+  </div>
+</div>
+
+<div
+  *ngIf="!isLoading"
+  class="wrapping-list box"
+  style="justify-content: space-between"
+>
   <div class="pack" *ngFor="let pack of secretPacks">
     <a [routerLink]="['/secretpacks', pack.secret_pack_id]">
       <div class="pack-name">{{ pack.set_name }}</div>
@@ -6,15 +36,21 @@
         style="cursor: pointer"
         src="assets/images/secret_packs/{{ pack.image_name }}.webp"
         [alt]="pack.set_name"
+        loading="lazy"
       />
     </a>
   </div>
-  <div *ngFor="let i of [].constructor(50)">
-    <p-skeleton
-      *ngIf="isLoading"
-      height="420px"
-      width="210px"
-      styleClass="mb-1"
-    ></p-skeleton>
-  </div>
+</div>
+
+<div
+  *ngIf="isLoading"
+  class="wrapping-list box"
+  style="justify-content: space-between"
+>
+  <p-skeleton
+    height="480px"
+    width="240px"
+    *ngFor="let i of [].constructor(50)"
+    styleClass="mb-1"
+  ></p-skeleton>
 </div>
