added ability to save collections

--- a/client/src/app/collections/collection/collection-card/collection-card.component.html
+++ b/client/src/app/collections/collection/collection-card/collection-card.component.html
@@ -27,7 +27,7 @@
     [alt]="card.card_name"
     loading="lazy"
   />
-  <div class="centered">{{ card.copies }}</div>
+  <div class="card-copies">{{ card.copies }}</div>
 </div>
 
 <app-card-modal [card]="card" [displayModal]="displayModal"></app-card-modal>
