--- a/client/src/app/master-duel/secret-pack-opening/secret-pack-opening.component.css
+++ b/client/src/app/master-duel/secret-pack-opening/secret-pack-opening.component.css
@@ -5,3 +5,26 @@
   justify-content: center;
   align-content: center;
 }
+
+.collection-select {
+  position: relative;
+  min-height: 200px;
+}
+
+.existing-collections {
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+.absolute-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+:host ::ng-deep .collection-select {
+  &.loading {
+    opacity: 0.7;
+  }
+}
