--- a/client/src/app/master-duel/secret-pack-opening/secret-pack-opening.component.html
+++ b/client/src/app/master-duel/secret-pack-opening/secret-pack-opening.component.html
@@ -64,12 +64,66 @@
     (onClick)="addMorePacks()"
     styleClass="p-button-success mx-1"
   ></p-splitButton>
-  <p-splitButton
+  <button
     *ngIf="packsOpened >= packsToOpen && allFlipped"
+    pButton
+    type="button"
     label="Add to Collection"
     icon="pi pi-plus"
-    [model]="collectionOptions"
-    (onClick)="finish()"
-    styleClass="p-button-success mx-1"
-  ></p-splitButton>
+    (click)="finish()"
+    [disabled]="loadingCollection"
+    class="p-button-success mx-1"
+  ></button>
 </div>
+
+<!-- Add collection selection dialog -->
+<p-dialog
+  [(visible)]="showCollectionDialog"
+  [modal]="true"
+  header="Choose Collection"
+  [style]="{ width: '450px' }"
+  [closable]="!loadingCollection"
+>
+  <div class="collection-select p-fluid">
+    <div class="mb-3">
+      <h5>Create New Collection</h5>
+      <div class="p-inputgroup">
+        <input
+          type="text"
+          pInputText
+          [(ngModel)]="newCollectionName"
+          placeholder="Enter collection name"
+        />
+        <button
+          pButton
+          type="button"
+          label="Create"
+          [disabled]="!newCollectionName || loadingCollection"
+          (click)="confirmCollection(undefined, newCollectionName)"
+        ></button>
+      </div>
+    </div>
+
+    <div *ngIf="collections.length > 0">
+      <h5>Or Add to Existing Collection</h5>
+      <div class="existing-collections">
+        <div *ngFor="let collection of collections" class="mb-2">
+          <button
+            pButton
+            type="button"
+            [label]="collection.collection_name"
+            [disabled]="loadingCollection"
+            (click)="confirmCollection(collection.collection_id)"
+            class="p-button-outlined w-full text-left"
+          ></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <p-progressSpinner
+    *ngIf="loadingCollection"
+    [style]="{ width: '50px', height: '50px' }"
+    styleClass="custom-spinner absolute-center"
+  ></p-progressSpinner>
+</p-dialog>
