--- a/client/src/app/collections/collection/collection-card/collection-card.component.css
+++ b/client/src/app/collections/collection/collection-card/collection-card.component.css
@@ -10,19 +10,14 @@
   height: auto;
 }
 
-.centered {
+.card-copies {
   position: absolute;
-  top: 66px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 48px;
-  text-shadow: 1px 1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000,
-    -1px -1px 0 #000, 0px 1px 0 #000, 0px -1px 0 #000, -1px 0px 0 #000,
-    1px 0px 0 #000, 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000,
-    -2px -2px 0 #000, 0px 2px 0 #000, 0px -2px 0 #000, -2px 0px 0 #000,
-    2px 0px 0 #000, 1px 2px 0 #000, -1px 2px 0 #000, 1px -2px 0 #000,
-    -1px -2px 0 #000, 2px 1px 0 #000, -2px 1px 0 #000, 2px -1px 0 #000,
-    -2px -1px 0 #000;
+  bottom: 0;
+  right: 0;
+  font-size: 32px;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 2px 17px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
 }
 
 .rarity {
