added secret packs

--- a/client/src/app/master-duel/secret-pack-card/secret-pack-card.component.html
+++ b/client/src/app/master-duel/secret-pack-card/secret-pack-card.component.html
@@ -13,27 +13,40 @@
         />
       </div>
       <div class="flip-card-back">
-        <div class="rarity">
-          <img
-            *ngIf="card.md_rarity === 'Common'"
-            src="assets/images/icons/Common.webp"
-            alt="Common"
-          />
-          <img
-            *ngIf="card.md_rarity === 'Rare'"
-            src="assets/images/icons/Rare.webp"
-            alt="Rare"
-          />
-          <img
-            *ngIf="card.md_rarity === 'Super Rare'"
-            src="assets/images/icons/SR.webp"
-            alt="Super Rare"
-          />
-          <img
-            *ngIf="card.md_rarity === 'Ultra Rare'"
-            src="assets/images/icons/UR.webp"
-            alt="Ultra Rare"
-          />
+        <div class="d-flex justify-content-between">
+          <div>
+            <i
+              class="pi pi-key"
+              style="color: yellow"
+              pTooltip="{{ card.secret_packs.join('\n') }}"
+              tooltipPosition="right"
+              [escape]="false"
+              [showDelay]="100"
+              *ngIf="card.secret_packs"
+            ></i>
+          </div>
+          <div class="rarity">
+            <img
+              *ngIf="card.md_rarity === 'Common'"
+              src="assets/images/icons/Common.webp"
+              alt="Common"
+            />
+            <img
+              *ngIf="card.md_rarity === 'Rare'"
+              src="assets/images/icons/Rare.webp"
+              alt="Rare"
+            />
+            <img
+              *ngIf="card.md_rarity === 'Super Rare'"
+              src="assets/images/icons/SR.webp"
+              alt="Super Rare"
+            />
+            <img
+              *ngIf="card.md_rarity === 'Ultra Rare'"
+              src="assets/images/icons/UR.webp"
+              alt="Ultra Rare"
+            />
+          </div>
         </div>
         <img
           class="card-img"
