--- a/client/src/app/master-duel/secret-pack-opening/secret-pack-opening.component.html
+++ b/client/src/app/master-duel/secret-pack-opening/secret-pack-opening.component.html
@@ -1,5 +1,25 @@
-<h3 class="mb-3 text-center">{{ packsOpened }} / {{ packsToOpen }}</h3>
-<div *ngIf="errorMessage" class="text-danger">
+<div class="header-container">
+  <div>
+    <div
+      class="keys-container"
+      [class.count-changed]="isCountChanged"
+      *ngIf="numUnlockedSecretPacks > 0"
+    >
+      <i
+        class="pi pi-key"
+        style="color: yellow"
+        pTooltip="{{ unlockedSecretPacks.join('\n') }}"
+        tooltipPosition="right"
+        [escape]="false"
+        [showDelay]="100"
+      ></i>
+      x{{ numUnlockedSecretPacks }}
+    </div>
+  </div>
+  <h3 class="pack-counter">{{ packsOpened }} / {{ packsToOpen }}</h3>
+</div>
+
+<div *ngIf="errorMessage" class="text-danger text-center">
   {{ errorMessage }}
 </div>
 
